vendor/proc-macro-error-1.0.4/tests/ui/append_dummy.stderr
error: append_dummy test
 --> $DIR/append_dummy.rs:9:15
  |
9 | append_dummy!(need_default);
  |               ^^^^^^^^^^^^
